@@ -21,7 +21,7 @@ public class JsonDigitalPostSchemaValidator {
 
     private Schema getSchema(String type) {
         return Optional.ofNullable(schemaMap.get(type))
-                .orElseThrow(() -> new IllegalArgumentException(String.format("Unknown standardBusinessDocument.standardBusinessDocumentHeader.documentIdentification.type = %s. Expecting one of %s", type, String.join(",", schemaMap.keySet()))));
+                .orElseThrow(() -> new IllegalArgumentException("Unknown standardBusinessDocument.standardBusinessDocumentHeader.documentIdentification.type = %s. Expecting one of %s".formatted(type, String.join(",", schemaMap.keySet()))));
     }
 
     private void validate(Object document, Schema schema) {
